# Faster-Voxtral-4B-TTS

./: LICENSE  README.md  pyproject.toml  server.py
voxtral/: __init__.py  config.py  embedding.py  nn.py  tts.py  weights.py
voxtral/acoustic/: __init__.py  attention.py  flow_matching.py  time_embedding.py
voxtral/codec/: __init__.py  attention.py  convolutions.py  decoder.py  quantizer.py
